2016-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/dhrystone.c:
	  Introduce a regression test based on the Dhrystone benchmark.

2016-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/gen.c
	  Fix a bug in emitCall().

2016-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.6.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.6.1

2016-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx:  version 3.6.0

2016-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  Work around an allocation issue.

2016-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.6.0 rc1, use coloured links
	* sdcc.spec: version 3.6.0
	* doc/Makefile.in: silence makeindex
	* sim/ucsim/cmd.src/cmdset.cc,
	* sim/ucsim/hc08.src/hc08cl.h,
	* sim/ucsim/sim.src/hw.cc,
	* sim/ucsim/sim.src/hwcl.h,
	* sim/ucsim/st7.src/st7cl.h,
	* sim/ucsim/stm8.src/stm8cl.h,
	* sim/ucsim/z80.src/z80cl.h: cosmetics
	* sim/ucsim/st7.src/st7.cc (cl_st7::disass): fixed get_disasm_info call

2016-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement genAddrOf for both X and Y in use (to make all regression tests compile for low --max-allocs-per-node).

2016-05-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: fixed bug #2489
	* support/regression/tests/wchar.c: re-enable hc08/s08 tests

2016-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Basic flag handling in notUsed(), more accurate notUsed().
	* src/stm8/peeph.def:
	  Enable dead load optimization (with fixed flag handling).

2016-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Improve labelIsReturnOnly() accuracy.
	* src/stm8/peeph.def:
	  Disable dead load optimization, introduce jump-to-return optimization.

2016-05-16 Philipp Klaus Krause <pkk AT spth.de>
