@@ -1,3 +1,11 @@
+2016-06-16 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/*/Makefile.in,
+	  device/lib/*/putchar.s,
+	  support/regression/ports/*/support.asm,
+	  support/regression/tests/dhrystone.c:
+	  Remove z80 putchar() from library.
+
 2016-06-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/dhrystone.c:
